refactor and fix integration test